--- a/src/templates/apply_flow.html
+++ b/src/templates/apply_flow.html
@@ -44,10 +44,10 @@
                             <div>
                                 <div class="row">
                                     <div class="col-xs-7 section-wide">
-                                        <input type="date" class="youyi-date form-control col-xs-8" name="from_date" ng-model="input.from_date" required>
+                                        <input type="text" class="youyi-date form-control col-xs-8" name="from_date" pick-a-date="input.from_date" pick-a-date-options="input.from_date_options" placeholder="请选择" required>
                                     </div>
                                     <div class="col-xs-5 section-wide">
-                                        <input type="time" class="youyi-time form-control col-xs-4" name="from_time" ng-model="input.from_time" required>
+                                        <input type="text" class="youyi-time form-control col-xs-4" name="from_time" pick-a-time="input.from_time" pick-a-time-options="input.time_options" placeholder="请选择" required>
                                     </div>
                                 </div>
                             </div>
@@ -60,10 +60,10 @@
                             <div>
                                 <div class="row">
                                     <div class="col-xs-7 section-wide">
-                                        <input type="date" class="youyi-date form-control col-xs-8" name="to_date" ng-model="input.to_date" required>
+                                        <input type="text" class="youyi-date form-control col-xs-8" name="to_date" pick-a-date="input.to_date" pick-a-date-options="input.to_date_options" placeholder="请选择" required>
                                     </div>
                                     <div class="col-xs-5 section-wide">
-                                        <input type="time" class="youyi-time form-control col-xs-4" name="to_time" ng-model="input.to_time" required>
+                                        <input type="text" class="youyi-time form-control col-xs-4" name="to_time" pick-a-time="input.to_time" pick-a-time-options="input.to_time_options" placeholder="请选择" required>
                                     </div>
                                 </div>
                             </div>
