--- a/src/templates/cash.html
+++ b/src/templates/cash.html
@@ -37,7 +37,7 @@
             {{"Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx" | translate}}
         </p>
         <p class="section large bg-transparent" ng-if="wallet.is_setPayPwd == 0">
-            <button type="button" class="btn bg-gray block full-width text-white" >请先设置交易密码</button>
+            <button type="button" class="btn bg-gray block full-width text-white">请先设置交易密码</button>
         </p>
         <p class="section large bg-transparent" ng-if="wallet.is_setPayPwd == 1">
             <button type="button" class="btn btn-primary block full-width" ng-disabled="cashForm.$invalid" ui-turn-on="password_panel">{{"Submit" | translate}}</button>
@@ -54,12 +54,17 @@
                     <h4 class="modal-title text-center">请输入支付密码</h4>
                 </div>
                 <div class="modal-body">
-                    <input type="password" class="form-control text-center" ng-model="input.password" placeholder="请输入交易密码，六位">
-                    <span class="text-primary">{{error.message}}</span>
+                    <span class="password-input">
+                        <input type="password" class="form-control" ng-model="input.password" focus-me="true">
+                        <span class="dot dot_{{$index}}" ng-repeat="d in imulate_password track by $index"></span>
+                    </span>
+                    <p class="text-primary text-center">{{error.message}}</p>
                 </div>
                 <div class="modal-footer text-center">
-                    <button ui-turn-off="password_panel" class="btn btn-default">取消</button>
-                    <button ng-click="ajaxForm()" ng-disabled="input.password == ''" class="btn btn-primary">确定</button>
+                    <div class="btn-group justified">
+                        <a ui-turn-off="password_panel" class="btn btn-default">取消</a>
+                        <a ng-click="ajaxForm()" ng-disabled="input.password == ''" class="btn btn-primary">确定<i class="fa fa-refresh" ng-show="input.paying"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
