--- a/src/templates/translators.html
+++ b/src/templates/translators.html
@@ -57,7 +57,7 @@
             <div class="navbar navbar-app">
                 <div class="navbar-brand navbar-brand-center">
                     <span class="search-input">
-                        <input type="text" class="form-control full-width" ng-model="input.search" placeholder="{{'Enter Search Keywords, Language/Place/Price/Type' | translate}}">
+                        <input type="text" class="form-control full-width" ng-model="input.search" focus-me="true" placeholder="{{'Enter Search Keywords, Language/Place/Price/Type' | translate}}">
                     </span>
                 </div>
                 <div class="btn-group pull-left">
