--- a/src/templates/applicants.html
+++ b/src/templates/applicants.html
@@ -120,12 +120,17 @@
                     <h4 class="modal-title text-center">请输入支付密码</h4>
                 </div>
                 <div class="modal-body">
-                    <input type="password" class="form-control text-center" ng-model="input.password" placeholder="请输入交易密码，六位">
-                    <span class="text-primary">{{input.error_message}}</span>
+                    <span class="password-input">
+                        <input type="password" class="form-control" ng-model="input.password" focus-me="true">
+                        <span class="dot dot_{{$index}}" ng-repeat="d in imulate_password track by $index"></span>
+                    </span>
+                    <p class="text-primary text-center">{{input.error_message}}</p>
                 </div>
                 <div class="modal-footer text-center">
-                    <button ui-turn-off="password_panel" class="btn btn-default">取消</button>
-                    <button ng-click="pay()" ng-disabled="input.password == ''" class="btn btn-primary">确定</button>
+                    <div class="btn-group justified">
+                        <a ui-turn-off="password_panel" class="btn btn-default">取消</a>
+                        <a ng-click="ajaxForm()" ng-disabled="input.password == ''" class="btn btn-primary">确定<i class="fa fa-refresh" ng-show="input.paying"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
