--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -52,7 +52,7 @@
                 <span class="tip text-warning" ng-show="sidebar.error.show">{{sidebar.error.message}}</span>
             </div>
             <div class="kk-input-group">
-                <button type="submit" class="btn btn-warning block full-width" ng-disabled="signinForm.$invalid">{{"Login" | translate}}</button>
+                <button type="submit" class="btn btn-warning block full-width" ng-disabled="signinForm.$invalid">{{"Login" | translate}}<i class="fa fa-refresh" ng-show="loading"></i></button>
             </div>
         </form>
     </div>
