--- a/src/less/index.less
+++ b/src/less/index.less
@@ -507,6 +507,6 @@
         border:none;
         outline: 0;
         background-color: transparent;
-        // color: transparent;
+        color: transparent;
     }
 }
