--- a/src/templates/records.html
+++ b/src/templates/records.html
@@ -1,5 +1,5 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">提现记录</div>
+<div ui-content-for="title">{{"Withdraw Record" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
 	<span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
